--- a/css/main.css
+++ b/css/main.css
@@ -104,17 +104,6 @@ img:not(navbar-icon-style) {
   }
  }
 
-/*pre {
- -webkit-overflow-scrolling:touch;
- background-color:#f5f5f5;
- color:#4a4a4a;
- font-size:.875em;
- overflow-x:auto;
- padding:1.25rem 1.5rem;
- white-space:pre;
- word-wrap:normal
-}*/
-
 .box {
  background-color:#ffffff;
  border-radius:6px;
@@ -163,8 +152,11 @@ img:not(navbar-icon-style) {
   text-overflow: ellipsis;
 }
 
-#motd {
-
+#btn-back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
 }
 
 /*.display-4 {
@@ -180,6 +172,6 @@ img:not(navbar-icon-style) {
 @keyframes rainbow { 
     0%{background-position:0% 50%}
     50%{background-position:100% 25%}
-    100%{background-position:0% 50%}*/
-
+    100%{background-position:0% 50%}
+*/
 /*# sourceMappingURL=main.css.map */
